      necessary.

    . Tilde accent  glyphs get vertically stretched at  small sizes so
      that they don't degenerate to horizontal lines.

    Both  features use  a database,  which currently  has entries  for
    Unicode characters lower than U+0180.  FreeType needs to access or
    construct a proper Unicode character map from a given font to make
    this work.

    This was Craig White's GSoC 2023 project.


  III. MISCELLANEOUS

  - TrueType and CFF glyph loading speed has been improved by 5-10% on
    modern 64-bit platforms  as  a result of better handling of fixed-
    point multiplication.

  - The BDF driver now loads fonts 75% faster.


======================================================================

CHANGES BETWEEN 2.13.2 and 2.13.3 (2024-Aug-11)

  I. IMPORTANT CHANGES

  - Some  fields  in  the  `FT_Outline` structure  have been   changed
    from signed  to unsigned type,  which  better reflects  the actual
    usage.   It  is  also  an  additional  means  to  protect  against
    malformed input.


  II. IMPORTANT BUG FIXES

  - Rare double-free crashes in the cache subsystem have been fixed.

  - Excessive stack allocation in the autohinter has been fixed.


  III. MISCELLANEOUS

  - The B/W  rasterizer has  received a major  upkeep that  results in
    large performance improvements.  The rendering speed has increased
    and even doubled for very complex glyphs.

  - If the new configuration option `TT_CONFIG_OPTION_GPOS_KERNING` is
    defined,  `FT_Get_Kerning`  understands rudimentary  GPOS  kerning
    (for TrueType fonts  only).  This is not enabled  by default since
    its usage  is very  limited, mainly  for legacy  applications that
    have to support TrueType fonts automatically converted from 'kern'
    tables to GPOS kerning.  If you need proper (GPOS) kerning support
    please use a higher-level library like HarfBuzz.

    Code contributed by David Saltzman <davidbsaltzman@gmail.com>.
